@@ -669,7 +669,7 @@ return $caption;
 		}
 
 	return $params;
-	
+
 	}
 
 /*
@@ -846,7 +846,7 @@ return $caption;
 			error(S_WRONG_DEPENDENCY_ERROR);
 			return false;
 		}
-		
+
 		if(CTrigger::exists(array('description' => $description, 'expression' => $expression))){
 			error('Trigger '.$description.' already exists');
 			return false;
@@ -1874,7 +1874,8 @@ return $caption;
 			return false;
 		}
 
-		if(!validate_trigger_dependency($expression, $deps)) {
+
+		if(!is_null($deps) && !validate_trigger_dependency($expression, $deps)) {
 			error(S_WRONG_DEPENDENCY_ERROR);
 			return false;
 		}
@@ -1941,10 +1942,10 @@ return $caption;
 						$description,
 						$type,
 						$priority,
-						NULL,		// status
+						$status,
 						$comments,
 						$url,
-						replace_template_dependencies($deps, $chd_trig_host['hostid']),
+						(is_null($deps) ? null : replace_template_dependencies($deps, $chd_trig_host['hostid'])),
 						$triggerid,
 						$flags
 					);
@@ -2005,13 +2006,15 @@ return $caption;
 		}
 // ---
 
-		delete_dependencies_by_triggerid($triggerid);
+		if(!is_null($deps)){
+			delete_dependencies_by_triggerid($triggerid);
 
-		foreach($deps as $id => $triggerid_up){
-			if(!$result2=add_trigger_dependency($triggerid, $triggerid_up)){
-				error(S_INCORRECT_DEPENDENCY.' ['.expand_trigger_description($triggerid_up).']');
+			foreach($deps as $id => $triggerid_up){
+				if(!$result2=add_trigger_dependency($triggerid, $triggerid_up)){
+					error(S_INCORRECT_DEPENDENCY.' ['.expand_trigger_description($triggerid_up).']');
+				}
+				$result &= $result2;
 			}
-			$result &= $result2;
 		}
 
 		if($result){
@@ -2291,7 +2294,7 @@ return $caption;
 					$templates[$dephost['hostid']] = $dephost;
 					$dep_templateids[$dephost['hostid']] = $dephost['hostid'];
 				}
-				
+
 				//we have a host trigger added to template trigger or otherwise
 				if($templated_trigger != $templated_dep){
 					return false;
